# rust-perf-comp

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
examples/: branch.rs  branchless.rs  simple.rs
src/: config.rs  lib.rs  main.rs  plot_perf_stats.rs
