[package]
name = "rust-perf-comp"
version = "0.1.0"
edition = "2021"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
num-format = "0.4.4"
pico-args = "0.5.0"
plotlib = "0.5.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
